--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "homepage": "https://github.com/cvgellhorn/webpack-boilerplate",
   "scripts": {
     "postinstall": "webpack -p --config ./webpack.config.build.js --progress",
+    "start": "NODE_ENV=production webpack -p --config webpack.config.build.js",
     "dev": "NODE_ENV=dev webpack-dev-server --inline --progress --config webpack.config.dev.js",
     "build": "NODE_ENV=production webpack -p --config webpack.config.build.js"
   },
