--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "postinstall": "npm run build",
     "dev": "NODE_ENV=dev webpack-dev-server --inline --progress --config webpack.config.dev.js",
-    "build": "NODE_ENV=production webpack -p --config webpack.config.build.js"
+    "build": "NODE_ENV=production webpack -p --config webpack.config.build.js",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
